--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
-    "cryptr": "^4.0.2",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
@@ -20,7 +19,10 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "npm": "^6.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "querystring": "^0.2.0",
+    "routes": "^2.1.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
